# pih-2nd

./: README.md
ch1/: 1.1.txt  1.2.txt  1.3.txt  1.4.txt  1.5.txt
ch10/: .gitignore  10.1.hs  10.2.hs  10.3.hs  10.4.hs  10.5.hs  10.6.hs
ch11/: stack.yaml  tictactoe.cabal  tictactoe.hs
ch12/: 12.1.hs  12.2.hs  12.3.hs  12.4.hs  12.5.hs  12.6.hs  12.7.hs  12.8.hs
ch13/: 13.1.hs  13.2.txt  13.3.txt  13.4.txt  13.5-13.7.hs  Parser.hs
ch16/: 16.1.hs  16.2.hs  16.3.hs  16.4.hs
ch2/: 2.1.hs  2.2.txt  2.3.hs  2.4.hs  2.5.hs
ch3/: 3.1.txt  3.2.txt  3.3-3.4.hs  3.5.txt
ch4/: 4.1.hs  4.2.hs  4.3.hs  4.4.hs  4.5.hs  4.6.hs  4.7.hs  4.8.hs
ch5/: 5.1.hs  5.10.hs  5.2-5.3.hs  5.4.hs  5.5.hs  5.6.hs  5.7.hs  5.8.hs  5.9.hs  CaeserCipher.hs
ch6/: 6.1.hs  6.2.hs  6.3.hs  6.4.hs  6.5.hs  6.6.hs  6.7-6.8.hs  6.9.hs  recursion.md
ch7/: 7.1.hs  7.2.hs  7.3.hs  7.4.hs  7.5.hs  7.6.hs  7.7-7.8.hs  7.9-7.10.hs  BinaryStringTransmitter.hs  Voting.hs
ch8/: 8.1.hs  8.2.hs  8.3.hs  8.4.hs  8.5-8.6.hs  8.7.hs  8.8.hs  8.9.hs  AbstractMachine.hs  TautologyChecker.hs
ch9/: 9.1.hs  9.2.hs  9.3.hs  9.4.hs  9.5.hs  9.6.hs  Countdown.hs  main.hs
