name: tictactoe
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.10

executable tictactoe
  hs-source-dirs: .
  main-is: tictactoe.hs
  default-language: Haskell2010
  default-extensions:
    NoImplicitPrelude,
    OverloadedStrings
  build-depends:
    base >= 4.7 && < 5,
    random
  ghc-options:
    -Wall
